--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,11 +28,12 @@ jobs:
                 NEWS_JSON=$( echo '{}' | jq -c --arg news "$NEWS_CONTENT" \
                                                  --arg commit "${{ github.event.after }}" \
                                                  --arg date "$(date)" \
-                                                 '{' \
-                                                     'formatted_body: ("<p><code>" + $commit + "</code> on <code>" + $date + "</code></p>\n\n<pre><code>patch\n" + $news + "</code></pre>"),' \
-                                                    'body: ("`" + $commit + "` on `" + $date + "`\n\n```patch\n" + $news + "```"),' \
-                                                    'msgtype: "m.notice","format":"org.matrix.custom.html"' \
-                                                 '}' )
+                                                 '{
+                                                     formatted_body: ("<p><code>" + $commit + "</code> on <code>" + $date + "</code></p>\n\n<pre><code>patch\n" + $news + "</code></pre>"),
+                                                     body: ("`" + $commit + "` on `" + $date + "`\n\n```patch\n" + $news + "```"),
+                                                     msgtype: "m.notice",
+                                                     format: "org.matrix.custom.html"
+                                                 }' )
                 curl -H "Content-Type: application/json" -d "$NEWS_JSON" "${{ secrets.MATRIX_NEWS_WEBHOOK_URL }}"
               fi
           fi
