Add copying with labels feature to logic processors

--- a/core/assets/bundles/bundle.properties
+++ b/core/assets/bundles/bundle.properties
@@ -2232,6 +2232,7 @@ lst.setflag = Set a global flag that can be read by all processors.
 lst.getflag = Check if a global flag is set.
 
 logic.nounitbuild = [red]Unit building logic is not allowed here.
+logic.copy.labels = Copy to clipboard with labels
 
 lenum.type = Type of building/unit.\ne.g. for any router, this will return [accent]@router[].\nNot a string.
 lenum.shoot = Shoot at a position.
